--- a/painel.html
+++ b/painel.html
@@ -1,98 +1,115 @@
 <!doctype html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>Painel — Saúde Bucal Japeri</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="brasil-sorridente-logo222.png">
+  <link rel="icon" type="image/png" href="brasil-sorridente-logo222.png?v=2">
 </head>
-
 <body>
+  <div class="wrap">
+    <header class="topbar">
+      <div class="header-left">
+        <div class="logos">
+          <img src="japeri-logo.png" alt="Japeri" class="logo-small">
+          <img src="brasil-sorridente-logo.png" alt="Brasil Sorridente" class="logo-small">
+        </div>
+        <div>
+          <div class="site-title">Painel de Saúde Bucal — Japeri</div>
+          <div class="muted small">Painel de acompanhamento (interno)</div>
+        </div>
+      </div>
 
-<header class="topbar">
-  <div class="logos">
-    <img src="japeri-logo.png">
-    <img src="brasil-sorridente-logo.png">
+      <nav class="nav" aria-label="Navegação">
+        <a href="index.html">Início</a>
+        <a href="avisos.html">Avisos</a>
+        <a href="painel.html" class="active">Painel</a>
+      </nav>
+
+      <div class="menu-wrap">
+        <button id="menuToggle" class="menu-btn" aria-haspopup="true" aria-expanded="false" title="Opções">
+          <span class="dot"></span><span class="dot"></span><span class="dot"></span>
+        </button>
+        <div id="menuPanel" class="menu-panel" role="menu" aria-hidden="true">
+          <button class="menu-item" data-action="goto" data-target="index.html">Ir para Início</button>
+          <button class="menu-item" data-action="goto" data-target="avisos.html">Ir para Avisos</button>
+          <button class="menu-item" data-action="goto" data-target="painel.html">Ir para Painel</button>
+          <hr>
+          <a class="menu-item" href="data.json" download="data.json">Baixar data.json</a>
+          <button class="menu-item" data-action="refresh">Atualizar dados</button>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="card">
+        <div class="grid-2" style="margin-bottom:12px">
+          <div class="bigcard">
+            <div class="bigcard-title">🟦 Em espera — Total</div>
+            <div id="geralAcumFila" class="big-number big1">—</div>
+            <div class="bigcard-foot">Soma de todos os postos em todos os meses registrados.</div>
+          </div>
+
+          <div class="bigcard">
+            <div class="bigcard-title">📅 Agendados — Total</div>
+            <div id="agTotal" class="big-number big2">—</div>
+            <div class="bigcard-foot">Total de pacientes com agendamento.</div>
+          </div>
+        </div>
+
+        <div class="notice">
+          📩 Quer saber sua posição exata na fila?
+          Fale com nossa equipe pelo e-mail <a href="mailto:odontologiajaperi@gmail.com">odontologiajaperi@gmail.com</a>.
+        </div>
+
+        <div class="grid-3 toolbar" style="align-items:end;margin-top:12px">
+          <div>
+            <label for="postoSelect">Posto</label>
+            <div class="select-wrap"><select id="postoSelect"></select></div>
+          </div>
+          <div>
+            <label for="mesSelect">Mês</label>
+            <div class="select-wrap"><select id="mesSelect"></select></div>
+          </div>
+          <div class="align-end">
+            <button id="refreshBtn" class="btn">Recarregar</button>
+          </div>
+        </div>
+
+        <div class="chips">
+          <div class="chip" id="pillPosto">Posto: —</div>
+          <div class="chip" id="pillMes">Mês: —</div>
+          <div class="chip" id="pillStamp">Atualizado: —</div>
+        </div>
+
+        <div class="sectionTitle">Totais conforme o filtro</div>
+        <div class="grid-2">
+          <div class="card small">
+            <div class="label">🕒 Em espera — mês selecionado do posto</div>
+            <div id="filaMes" class="value">—</div>
+            <div id="filaMesObs" class="sub"></div>
+          </div>
+          <div class="card small">
+            <div class="label">🏥 Em espera — Total do posto</div>
+            <div id="postoAcumFila" class="value">—</div>
+            <div id="postoAcumFilaObs" class="sub"></div>
+          </div>
+        </div>
+
+        <div class="sectionTitle">Resumo por posto (soma de todos os meses)</div>
+        <div id="postoResumo" class="list"></div>
+
+        <div id="error" class="error"></div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <img src="japeri-logo.png" alt="Japeri">
+      <div class="muted">Prefeitura de Japeri — Saúde Bucal</div>
+    </footer>
   </div>
 
-  <nav class="nav">
-    <a href="index.html">Início</a>
-    <a href="avisos.html">Avisos</a>
-    <a href="painel.html" class="active">Painel</a>
-  </nav>
-</header>
-
-<main class="page">
-
-  <h1>Painel de Acompanhamento</h1>
-
-  <!-- o conteúdo que você já tinha permanece aqui -->
-  <!-- mantive tudo igual, só limpei tags desnecessárias -->
-
-  <section class="card">
-    <div class="grid-2">
-      <div class="bigcard">
-        <div class="bigcard-title">🟦 Em espera — Total</div>
-        <div id="geralAcumFila" class="big-number big1">—</div>
-      </div>
-      <div class="bigcard">
-        <div class="bigcard-title">📅 Agendados — Total</div>
-        <div id="agTotal" class="big-number big2">—</div>
-      </div>
-    </div>
-
-    <div class="notice">
-      📩 Quer saber sua posição exata na fila?
-      <a href="mailto:odontologiajaperi@gmail.com">odontologiajaperi@gmail.com</a>
-    </div>
-
-    <div class="grid-3 toolbar">
-      <div>
-        <label>Posto</label>
-        <select id="postoSelect"></select>
-      </div>
-      <div>
-        <label>Mês</label>
-        <select id="mesSelect"></select>
-      </div>
-      <div>
-        <button id="refreshBtn">Recarregar</button>
-      </div>
-    </div>
-
-    <div class="chips">
-      <div id="pillPosto" class="chip">Posto: —</div>
-      <div id="pillMes" class="chip">Mês: —</div>
-      <div id="pillStamp" class="chip">Atualizado: —</div>
-    </div>
-
-    <h2>Totais conforme o filtro</h2>
-    <div class="grid-2">
-      <div class="card small">
-        <div class="label">🕒 Em espera — mês selecionado</div>
-        <div id="filaMes" class="value">—</div>
-      </div>
-      <div class="card small">
-        <div class="label">🏥 Em espera — Total do posto</div>
-        <div id="postoAcumFila" class="value">—</div>
-      </div>
-    </div>
-
-    <h2>Resumo por posto</h2>
-    <div id="postoResumo" class="list"></div>
-
-  </section>
-
-  <div id="error" class="error"></div>
-
-</main>
-
-<footer class="footer">
-  <img src="japeri-logo.png">
-  <div>Prefeitura de Japeri — Saúde Bucal</div>
-</footer>
-
-<script src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
