--- a/avisos.html
+++ b/avisos.html
@@ -6,10 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="brasil-sorridente-logo222.png?v=2">
+
+  <!-- pequenos ajustes para evitar sobreposição do menu -->
+  <style>
+    .site-title { max-width:46vw; overflow:hidden; text-overflow:ellipsis; white-space:nowrap; }
+    .hero-illustration img { max-width:120px; }
+    @media (min-width:900px){ .hero-illustration img { max-width:220px } }
+    #drawerOverlay{position:fixed; inset:0;background:rgba(0,0,0,0.32);display:none;z-index:90}
+    .side-drawer{position:fixed; right:0; top:0; height:100vh; width:84%; max-width:320px; background:#fff; box-shadow:-8px 0 30px rgba(0,0,0,0.12); transform:translateX(110%); transition:transform .26s ease; z-index:100; padding:18px; overflow:auto; border-left:1px solid rgba(15,139,214,0.06);}
+    .side-drawer.open{transform:translateX(0)}
+  </style>
 </head>
 <body>
   <div class="wrap">
-    <!-- HEADER -->
     <header class="topbar">
       <div class="header-left">
         <div class="logos">
@@ -22,27 +31,17 @@
         </div>
       </div>
 
-      <!-- desktop nav -->
       <nav class="nav" aria-label="Navegação">
         <a href="index.html">Início</a>
         <a href="avisos.html" class="active">Avisos</a>
         <a href="painel.html">Painel</a>
       </nav>
 
-      <!-- mobile hamburger -->
-      <button class="hamburger" aria-label="Abrir menu" aria-expanded="false" type="button">
-        <span class="bar"></span>
+      <button id="drawerToggle" class="menu-btn" aria-label="Abrir opções" title="Opções">
+        <span class="dot"></span><span class="dot"></span><span class="dot"></span>
       </button>
-
-      <!-- mobile nav panel -->
-      <div class="mobile-nav-panel" role="navigation" aria-hidden="true">
-        <a href="index.html" class="tabbtn">Início</a>
-        <a href="avisos.html" class="tabbtn">Avisos</a>
-        <a href="painel.html" class="tabbtn">Painel</a>
-      </div>
     </header>
 
-    <!-- MAIN -->
     <main>
       <section class="card">
         <h1>Avisos e Comunicados</h1>
@@ -61,22 +60,35 @@
     </footer>
   </div>
 
-  <!-- mobile nav toggle script -->
+  <div id="drawerOverlay" aria-hidden="true"></div>
+  <aside id="sideDrawer" class="side-drawer" aria-hidden="true" role="dialog" aria-label="Opções do site">
+    <div style="display:flex;align-items:center;gap:8px;margin-bottom:12px">
+      <strong>Opções</strong>
+      <button id="drawerClose" style="margin-left:auto;padding:6px;border-radius:8px;border:1px solid var(--line);background:#fff;cursor:pointer">Fechar</button>
+    </div>
+    <nav>
+      <a class="drawer-item" href="index.html">Início</a>
+      <a class="drawer-item" href="avisos.html">Avisos</a>
+      <a class="drawer-item" href="painel.html">Painel</a>
+      <hr>
+      <a class="drawer-item" href="mailto:odontologiajaperi@gmail.com">Contato (e-mail)</a>
+      <a class="drawer-item" href="data.json" download>Baixar data.json</a>
+    </nav>
+  </aside>
+
   <script>
     (function(){
-      const ham = document.querySelector('.hamburger');
-      const mpanel = document.querySelector('.mobile-nav-panel');
-      if(!ham || !mpanel) return;
-      ham.addEventListener('click', ()=> {
-        const open = mpanel.classList.toggle('open');
-        ham.setAttribute('aria-expanded', open ? 'true' : 'false');
-        mpanel.setAttribute('aria-hidden', open ? 'false' : 'true');
-      });
-      document.addEventListener('click', (e)=> {
-        if(!mpanel.classList.contains('open')) return;
-        if(e.target.closest('.mobile-nav-panel') || e.target.closest('.hamburger')) return;
-        mpanel.classList.remove('open'); ham.setAttribute('aria-expanded','false'); mpanel.setAttribute('aria-hidden','true');
-      });
+      const toggle = document.getElementById('drawerToggle');
+      const drawer = document.getElementById('sideDrawer');
+      const overlay = document.getElementById('drawerOverlay');
+      const closeBtn = document.getElementById('drawerClose');
+      function openDrawer(){ drawer.classList.add('open'); drawer.setAttribute('aria-hidden','false'); overlay.style.display='block'; overlay.setAttribute('aria-hidden','false'); }
+      function closeDrawer(){ drawer.classList.remove('open'); drawer.setAttribute('aria-hidden','true'); overlay.style.display='none'; overlay.setAttribute('aria-hidden','true'); }
+      toggle?.addEventListener('click', (e)=>{ e.stopPropagation(); openDrawer(); });
+      closeBtn?.addEventListener('click', closeDrawer);
+      overlay?.addEventListener('click', closeDrawer);
+      document.addEventListener('keydown', (ev)=>{ if(ev.key==='Escape') closeDrawer(); });
+      drawer?.addEventListener('click', (e)=>{ if(e.target.closest('.drawer-item')) closeDrawer(); });
     })();
   </script>
 </body>
